25/6/4学了以下内容： 1.前端三剑客的代码分离、给元素设计和注入简单样式 2.对git分区的理解、删除操作的理解、文件各种状态的转换

--- a/PlanApp/models/custom.html
+++ b/PlanApp/models/custom.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Your Schedules</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="autoLoadForm.js" defer></script>
 </head>
 <h1>自定义计划界面</h1>
 <body>
     <form id="custom-plan-form" method="post">
         <label for="plan-container">任务名称:</label>
-        <input type="text" id="plan-container" name="plan-name" required>
+        <input type="text" id="plan-container" class="custom-input" required>
         <br>
 
         <label for="type-selector">计划类型:</label>
-        <select name="plan-type" id="type-selector">
+        <select name="plan-type" id="type-selector" class="custom-selector">
             <option value="finished">任务完成与否</option>
             <option value="countable">统计数量多少</option>
             <option value="time">设置时间限制</option>
@@ -22,7 +24,7 @@
         <div name="target-container" id="target-container"></div>
 
         <label for="frequency-selector">任务频率:</label>
-        <select name="plan-frequency" id="frequency-selector">
+        <select name="plan-frequency" id="frequency-selector" class="custom-selector">
             <option value="day">每天</option>
             <option value="week">每周</option>
             <option value="month">每月</option>
@@ -31,50 +33,10 @@
         <br>
 
         <label for="target">任务目标:</label>
-        <input type="text" id="target" name="target" required>
+        <input type="text" id="target" class="custom-input" required>
+        <br>
 
         <button type="submit">确定</button>
     </form>
-
-    <script>
-        // 监听了文档加载完成事件，并对其注册了执行的函数
-        document.addEventListener("DOMContentLoaded",function(){
-            const typeSelector = document.getElementById("type-selector")   //取得select对象，方便对其注册事件监听器
-            const targetContainer = document.getElementById("target-container")    //取得动态目标类型的容器，以便appendChild
-            const targetText = document.getElementById("target");
-
-            // 内容数据
-            const targetTypeData = {
-                countable:{min : "至少",max : "至多",hint : "例如：喝几杯水、抽几根烟"},
-                time:     {min : "最早",max : "最晚",hint : "例如：几点起床、几点睡觉"}
-            };
-
-            // 监听类型选择标签的改动事件
-            typeSelector.addEventListener("change",function(){
-                // 清空target选择容器和target文本框提示文本
-                targetContainer.innerHTML = '';
-                targetText.placeholder = '';
-                const selectedCategory = this.value;
-                const item = targetTypeData[selectedCategory];                
-                // 根据需要创建一个标签
-                if(item) {
-                    const targetTypeLabel = document.createElement('label');
-                    targetTypeLabel.for = "target-selector";
-                    targetTypeLabel.innerHTML = "目标类型:"
-                    // 创建选择器
-                    const targetTypeSelector = document.createElement("select");
-                    targetTypeSelector.id = "target-selector";
-                    targetTypeSelector.innerHTML = `
-                        <option value="min">${item.min}</option>
-                        <option value="max">${item.max}</option>
-                    `;
-                    targetText.placeholder = item.hint;
-                    targetContainer.appendChild(targetTypeLabel);
-                    targetContainer.appendChild(targetTypeSelector);
-                }
-            })
-        }
-        )
-    </script>
 </body>
 </html>
